Adds some text.

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: default
 title: Home
 ---
-
+<p class="feature">The stories communities tell about themselves&mdash;through monuments, memorials and other common spaces&mdash;often need to be challenged because they value one group of people over others.</p>
 <p><em>{{ site.title }}</em> helps communities change problematic narratives that sustain enduring disparities by transforming monuments, memorials, and other community spaces identified with white supremacy and other harmful histories</p>
